--- a/src/app/features/crm/components/branch/branch.component.css
+++ b/src/app/features/crm/components/branch/branch.component.css
@@ -31,23 +31,28 @@ fieldset legend {
 
 .icon-circle {
   display: inline-block;
-  background-color: #E4E7EB;
-  color: #00529B;
+  background-color: #e4e7eb;
+  color: #00529b;
   border-radius: 50%;
   width: 40px;
   height: 40px;
   text-align: center;
   line-height: 40px;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .custom-table {
   cursor: pointer;
 }
 
+.custom-table.selected {
+  background-color: #c8c7cc;
+}
+
 .img_upload {
   display: inline-block;
-  font-family: 'Roboto', serif;
+  font-family: "Roboto", serif;
   text-align: center;
   background-color: white;
   color: var(--primary-color);
@@ -59,7 +64,6 @@ fieldset legend {
 
   .fa {
     vertical-align: middle;
-
   }
 }
 
