--- a/src/app/features/crm/components/country/country.component.css
+++ b/src/app/features/crm/components/country/country.component.css
@@ -1,65 +1,70 @@
 .card-header {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-    letter-spacing: 0em;
-    color: #000000;
-    border-bottom: none;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0em;
+  color: #000000;
+  border-bottom: none;
 }
 
 label {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .form-group .form-select {
-    border-radius: 8px;
+  border-radius: 8px;
 }
 
 .form-group .form-control {
-    border-radius: 8px;
+  border-radius: 8px;
 }
 
 .custom-input {
-    width: 80%;
-    border-radius: 8px;
+  width: 80%;
+  border-radius: 8px;
 }
 
 .icon-circle {
-    display: inline-block;
-    background-color: #E4E7EB;
-    color: #00529B;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    line-height: 40px;
-    margin-right: 10px;
+  display: inline-block;
+  background-color: #e4e7eb;
+  color: #00529b;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
 .btn-tab {
-    margin-right: 10px;
-    background-color: #fff;
-    color: black;
-    border: none;
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
+  margin-right: 10px;
+  background-color: #fff;
+  color: black;
+  border: none;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 ::ng-deep .p-dropdown .p-dropdown-label {
-    display: flex;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 ::ng-deep .p-dropdown .p-dropdown-filter {
-    height: 30px;
+  height: 30px;
 }
 
 .custom-table {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+.custom-table.selected {
+  background-color: #c8c7cc;
 }
