--- a/src/app/features/crm/components/region/region.component.css
+++ b/src/app/features/crm/components/region/region.component.css
@@ -22,16 +22,31 @@ label {
 
 .icon-circle {
   display: inline-block;
-  background-color: #E4E7EB;
-  color: #00529B;
+  background-color: #e4e7eb;
+  color: #00529b;
   border-radius: 50%;
   width: 40px;
   height: 40px;
   text-align: center;
   line-height: 40px;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .custom-table {
   cursor: pointer;
+}
+
+.custom-table.selected {
+  background-color: #c8c7cc;
+}
+
+::ng-deep .p-dropdown .p-dropdown-label {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+::ng-deep .p-dropdown .p-dropdown-filter {
+  height: 35px;
 }
