--- a/src/app/features/crm/components/user-parameters/user-parameters.component.css
+++ b/src/app/features/crm/components/user-parameters/user-parameters.component.css
@@ -10,22 +10,27 @@
 
 .icon-circle {
   display: inline-block;
-  background-color: #E4E7EB;
-  color: #00529B;
+  background-color: #e4e7eb;
+  color: #00529b;
   border-radius: 50%;
   width: 40px;
   height: 40px;
   text-align: center;
   line-height: 40px;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .custom-table {
   cursor: pointer;
 }
 
-::ng-deep .p-datatable .p-datatable-tbody td:nth-child(2) {
+.custom-table.selected {
+  background-color: #c8c7cc;
+}
+
+/* ::ng-deep .p-datatable .p-datatable-tbody td:nth-child(2) {
   max-width: 250px;
   overflow: hidden;
   text-overflow: ellipsis;
-}
+} */
