--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
@@ -223,7 +223,7 @@
 
 
     <div class="float-end mb-4">
-        
+        <button class="btn btn-primary" #openModal data-bs-toggle="modal" data-bs-target="#exampleModal" hidden></button>
         <button class="btn btn-primary"  (click)="getExistingQuotations()" >Next</button>
     </div>
     
