--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -96,7 +96,7 @@
                              
                     
                               <p-table [value]="filteredSection" id="clientTable" dataKey="code" [tableStyle]="{ 'max-width': '50rem', 'border-spacing': '10 10px' }"
-                                [(selection)]="selectedSections" [resizableColumns]="true" styleClass="p-datatable-sm"
+                                [(selection)]="selectedSections"   [resizableColumns]="true" styleClass="p-datatable-sm"
                                 responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [paginator]="true" [rows]="10"
                                 [scrollable]="true" scrollDirection="horizontal" [showCurrentPageReport]="true"
                                 currentPageReportTemplate="{first} - {last} of {totalRecords}">
@@ -108,10 +108,11 @@
                                   <th style="width: 33%;">Value</th>
                                 </tr>
                               </ng-template>
-                              <ng-template pTemplate="body" let-section let-editing="editing">
+                              <ng-template pTemplate="body" let-section let-editing="editing" let-i="rowIndex">
                                 <tr  style="height: 40px; padding: 10px; margin-bottom: 10px;">
                                     <td>
-                                        <p-tableCheckbox [value]="section" [(ngModel)]="section.checked"></p-tableCheckbox>
+                                        <!-- <p-tableCheckbox [value]="section" [(ngModel)]="section.checked"></p-tableCheckbox> -->
+                                        <input type="checkbox"  [checked]="isSectionChecked(section)">
 
                                     </td>
                                   <td>{{ section.sectionShortDescription }}</td>
@@ -128,7 +129,9 @@
                                     <td></td>
 
                                     <td [pEditableColumn]="section.limitAmount" pEditableColumnField="limitAmount">
-                                        <input [(ngModel)]="section.limitAmount" class="cellEditorInput"/>
+                                        <!-- <input [(ngModel)]="section.limitAmount" class="cellEditorInput"/> -->
+                                        <input [(ngModel)]="section.limitAmount" class="cellEditorInput" type="text" (keyup)="onKeyUp($event, section)">
+
                                         <!-- <input [(ngModel)]="section.freeLimit" (input)="onInputChange(section)" class="cellEditorInput" /> -->
 
 
@@ -141,6 +144,7 @@
                                             </ng-template>
                                         </p-cellEditor> -->
                                     </td>
+                                    
                                       
                                   
                                 </tr>
